<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dear_rep"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/title_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rdo_Pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdo_pro_str" />

        <RadioButton
            android:id="@+id/rdo_Con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdo_con_str" />

    </RadioGroup>


    <TextView
        android:id="@+id/radio_button_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_details"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/details_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/> 

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_email" />

</LinearLayout>